jlamontSC-test/src/objects/Call_Report__c.object
<CustomObject>
    <description>Stores the Planned Giving and Major Giving discussions that cannot be stored in tasks.</description>
    <fields>
        <fullName>Assets__c</fullName>
        <label>Assets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major Giving</fullName>
                </value>
                <value>
                    <fullName>Planned Giving</fullName>
                </value>
                <value>
                    <fullName>Business Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Donor_Background__c</fullName>
        <label>Donor Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gift_and_Financial_Planning__c</fullName>
        <label>Gift and Financial Planning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gift_of_Assets_Conversation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the GO and the donor discussed a planned gift, stocks, or appreciated assets.</description>
        <inlineHelpText>Indicates that the GO and the donor discussed a planned gift, stocks, or appreciated assets.</inlineHelpText>
        <label>Gift of Assets Conversation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Newest long text field for non-confidential comments.</description>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Task__c</fullName>
        <label>Parent Task</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Philanthropic_Goals__c</fullName>
        <label>Philanthropic Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCIA_Discussion__c</fullName>
        <label>SCIA  Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCPC_Pol_Cmte_Discussion__c</fullName>
        <label>SCPC(Pol Cmte) Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X501_c_3_Discussion__c</fullName>
        <label>501(c)(3) Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X501_c_4_Discussion__c</fullName>
        <label>501(c)(4) Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X527_Voter_Education_Discussion__c</fullName>
        <label>527/Voter Education Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Contact Report</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Contact Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>